circular cropped meter image added, navbar color change, footer fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,67 @@
+@import url(https://fonts.googleapis.com/css?family=Ropa+Sans);
+
+#wrapper{
+	margin-top: 35px;
+	margin-bottom: 200px;
+	padding: 15px;
+	height: 100%;
+}
+
+body{
+	font-family: 'Ropa Sans', sans-serif;
+	/*background:linear-gradient(to bottom right, #f2e5d9 , #dfbe9f); */
+}
+
+.center-text{
+	text-align: center;
+}
+
+.center{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .navbar{
-	background: #0066cc;
+	background: #3973ac;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.navbar-brand{
+	font-size: 2em;
 }
 
 .navbar-default .navbar-nav>li>a {
     color: #fff;
+    font-size: 1.5em;
 }
 
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
     margin-left: -15px;
     color: #fff;
+}
+
+.footer{
+	height: 30px;
+	background: #800000;
+}
+
+.evenRow{
+	background: #f2e5d9;
+	padding: 15px;
+}
+
+.oddRow{
+	background: #ebd8c6;
+	padding: 15px;
+}
+
+#lead-header{
+	font-size: 3.5em;
+}
+
+#meterImg{
+	height: 200px;
+	width: 200px;
 }
